[package]
name = "todo_app"
version = "0.1.0"
authors = ["vi_mi <fenil.jain2018@vitstudent.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.69"

[lib]
crate-type = ["cdylib", "rlib"]
